{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 32,
  "lineage": "f4739935-58d8-6972-4d9c-69e5edcfe439",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-07-29T04:19:04.884-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stellar-utility-356407/global/firewalls/peerfirewall",
            "log_config": [],
            "name": "peerfirewall",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network1",
            "priority": 1000,
            "project": "stellar-utility-356407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/firewalls/peerfirewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-07-29T04:19:04.868-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stellar-utility-356407/global/firewalls/peerfirewall1",
            "log_config": [],
            "name": "peerfirewall1",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network2",
            "priority": 1000,
            "project": "stellar-utility-356407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/firewalls/peerfirewall1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220719",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/zones/us-central1-a/disks/myterravm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stellar-utility-356407/zones/us-central1-a/instances/myterravm",
            "instance_id": "324253807620572451",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "lu8j7L-xmyo=",
            "name": "myterravm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.24.218",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network1",
                "network_ip": "172.16.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/subnetworks/f1subnet",
                "subnetwork_project": "stellar-utility-356407"
              }
            ],
            "project": "stellar-utility-356407",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/zones/us-central1-a/instances/myterravm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "web"
            ],
            "tags_fingerprint": "IAN2l23dJBM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220719",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/zones/asia-northeast2-a/disks/myterravm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stellar-utility-356407/zones/asia-northeast2-a/instances/myterravm1",
            "instance_id": "2919202314047374626",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "lu8j7L-xmyo=",
            "name": "myterravm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.97.69.143",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network2",
                "network_ip": "172.20.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/asia-northeast2/subnetworks/f2subnet",
                "subnetwork_project": "stellar-utility-356407"
              }
            ],
            "project": "stellar-utility-356407",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/zones/asia-northeast2-a/instances/myterravm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "web"
            ],
            "tags_fingerprint": "IAN2l23dJBM=",
            "zone": "asia-northeast2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/stellar-utility-356407/global/networks/test-network1",
            "mtu": 0,
            "name": "test-network1",
            "project": "stellar-utility-356407",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/stellar-utility-356407/global/networks/test-network2",
            "mtu": 0,
            "name": "test-network2",
            "project": "stellar-utility-356407",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-29T04:19:04.984-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/stellar-utility-356407/regions/us-central1/subnetworks/f1subnet",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "f1subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "stellar-utility-356407",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/subnetworks/f1subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-29T04:19:07.001-07:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/stellar-utility-356407/regions/asia-northeast2/subnetworks/f2subnet",
            "ip_cidr_range": "172.20.0.0/20",
            "name": "f2subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/test-network2",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "stellar-utility-356407",
            "purpose": "PRIVATE",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/asia-northeast2/subnetworks/f2subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    }
  ]
}